--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -335,6 +335,14 @@ h6 {
   font-size: 0.78405rem;
   line-height: 1.1;
 }
+
+p,
+li,
+button {
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
 hgroup {
   margin-left: 0;
   margin-right: 0;
@@ -594,4 +602,9 @@ pre tt:after {
   html {
     font-size: 100%;
   }
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
