--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -608,3 +608,17 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+li {
+  position: relative;
+}
+
+li:before {
+  background-image: url("data:image/svg+xml;utf8,<svg width='15' height='11' viewBox='0 0 15 11' xmlns='http://www.w3.org/2000/svg'><path id='mask' d='M2 6l3.5 3.5L13 2' stroke-width='2' stroke='%230099FF' fill='none' stroke-linecap='round'/></svg>");
+  content: "";
+  height: 11px;
+  left: -25px;
+  position: absolute;
+  top: 9px;
+  width: 15px;
+}
